--- a/lib/posix/options/CMakeLists.txt
+++ b/lib/posix/options/CMakeLists.txt
@@ -22,29 +22,23 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_SIGNALS)
   endif()
 endif()
 
-if(CONFIG_POSIX_API OR CONFIG_POSIX_THREADS OR CONFIG_POSIX_TIMERS OR
-  CONFIG_POSIX_MESSAGE_PASSING OR CONFIG_POSIX_FILE_SYSTEM OR CONFIG_EVENTFD OR
-  CONFIG_POSIX_C_LIB_EXT OR CONFIG_POSIX_SINGLE_PROCESS)
-  # This is a temporary workaround so that Newlib declares the appropriate
-  # types for us. POSIX features to be formalized as part of #51211
-  zephyr_compile_options($<$<COMPILE_LANGUAGE:C>:-D_POSIX_THREADS>)
-  zephyr_compile_options($<$<COMPILE_LANGUAGE:CXX>:-D_POSIX_THREADS>)
-endif()
-
 zephyr_library()
 zephyr_library_sources_ifdef(CONFIG_EVENTFD eventfd.c)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_ASYNCHRONOUS_IO)
   zephyr_library_sources_ifdef(CONFIG_POSIX_ASYNCHRONOUS_IO aio.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_ASYNCHRONOUS_IO -D_POSIX_ASYNCHRONOUS_IO=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_BARRIERS)
   zephyr_library_sources_ifdef(CONFIG_POSIX_BARRIERS barrier.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_BARRIERS -D_POSIX_BARRIERS=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_CLOCK_SELECTION)
   zephyr_library_sources_ifdef(CONFIG_POSIX_CLOCK_SELECTION clock_selection.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_CLOCK_SELECTION -D_POSIX_CLOCK_SELECTION=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_C_LIB_EXT)
   zephyr_library_sources_ifdef(CONFIG_POSIX_C_LIB_EXT
@@ -54,6 +48,7 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_C_LIB_EXT)
     getopt/getopt_common.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_C_LIB_EXT -D_POSIX_C_LIB_EXT=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_DEVICE_IO)
   zephyr_library_sources_ifdef(CONFIG_POSIX_DEVICE_IO
@@ -62,28 +57,34 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_DEVICE_IO)
     device_io.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_DEVICE_IO -D_POSIX_DEVICE_IO=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_FD_MGMT)
   zephyr_library_sources_ifdef(CONFIG_POSIX_FD_MGMT
     fd_mgmt.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_FD_MGMT -D_POSIX_FD_MGMT=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_FILE_SYSTEM)
   zephyr_library_sources_ifdef(CONFIG_POSIX_FILE_SYSTEM fs.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_FILE_SYSTEM -D_POSIX_FILE_SYSTEM=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_FILE_SYSTEM_R)
   zephyr_library_sources_ifdef(CONFIG_POSIX_FILE_SYSTEM_R file_system_r.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_FILE_SYSTEM_R -D_POSIX_FILE_SYSTEM_R=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_MEMORY_PROTECTION)
-zephyr_library_sources_ifdef(CONFIG_POSIX_MEMORY_PROTECTION mprotect.c)
+  zephyr_library_sources_ifdef(CONFIG_POSIX_MEMORY_PROTECTION mprotect.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_MEMORY_PROTECTION -D_POSIX_MEMORY_PROTECTION=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_MAPPED_FILES)
   zephyr_library_sources_ifdef(CONFIG_POSIX_MAPPED_FILES mmap.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_MAPPED_FILES -D_POSIX_MAPPED_FILES=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_MULTI_PROCESS)
   zephyr_library_sources_ifdef(CONFIG_POSIX_MULTI_PROCESS
@@ -91,14 +92,17 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_MULTI_PROCESS)
     multi_process.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_MULTI_PROCESS -D_POSIX_MULTI_PROCESS=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_NETWORKING)
   zephyr_library_sources_ifdef(CONFIG_POSIX_NETWORKING net.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_NETWORKING -D_POSIX_NETWORKING=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_SIGNALS)
   zephyr_library_sources_ifdef(CONFIG_POSIX_SIGNALS signal.c ${STRSIGNAL_TABLE_H})
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_SIGNALS -D_POSIX_SIGNALS=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_SINGLE_PROCESS)
   zephyr_library_sources_ifdef(CONFIG_POSIX_SINGLE_PROCESS
@@ -109,10 +113,12 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_SINGLE_PROCESS)
     uname.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_SINGLE_PROCESS -D_POSIX_SINGLE_PROCESS=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_SPIN_LOCKS)
   zephyr_library_sources_ifdef(CONFIG_POSIX_SPIN_LOCKS spinlock.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_SPIN_LOCKS -D_POSIX_SPIN_LOCKS=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_TIMERS)
   zephyr_library_sources_ifdef(CONFIG_POSIX_TIMERS
@@ -121,16 +127,26 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_TIMERS)
     timespec_to_timeout.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_TIMERS -D_POSIX_TIMERS=200809L)
+# this is technically not an option group, but an option. Temporary hack here. Should be enabled
+# with CONFIG_XSI_ADVANCED_REALTIME.
+zephyr_compile_options_ifdef(CONFIG_POSIX_MONOTONIC_CLOCK -D_POSIX_MONOTONIC_CLOCK=200809L)
+# this is technically not an option group, but an option. Temporary hack here. Should be enabled
+# with CONFIG_XSI_ADVANCED_REALTIME.
+zephyr_compile_options_ifdef(CONFIG_POSIX_MONOTONIC_CLOCK -D_POSIX_MONOTONIC_CLOCK=200809L)
+
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_READER_WRITER_LOCKS)
   # Note: the Option is _POSIX_READER_WRITER_LOCKS, while the Option Group is POSIX_RW_LOCKS.
   # We have opted to use POSIX_READER_WRITER_LOCKS here to match the Option name.
   zephyr_library_sources_ifdef(CONFIG_POSIX_READER_WRITER_LOCKS rwlock.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_READER_WRITER_LOCKS -D_POSIX_READER_WRITER_LOCKS=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_SEMAPHORES)
   zephyr_library_sources_ifdef(CONFIG_POSIX_SEMAPHORES semaphore.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_SEMAPHORES -D_POSIX_SEMAPHORES=200809L)
 
 if (NOT CONFIG_TC_PROVIDES_POSIX_THREADS)
   # Note: the Option is _POSIX_THREADS, while the Option Group is POSIX_THREADS_BASE.
@@ -144,6 +160,7 @@ if (NOT CONFIG_TC_PROVIDES_POSIX_THREADS)
     pwd.c
   )
 endif()
+zephyr_compile_options_ifdef(CONFIG_POSIX_THREADS -D_POSIX_THREADS=200809L)
 
 if(NOT CONFIG_TC_PROVIDES_XSI_REALTIME)
   zephyr_library_sources_ifdef(CONFIG_POSIX_FSYNC fsync.c)
@@ -152,6 +169,9 @@ if(NOT CONFIG_TC_PROVIDES_XSI_REALTIME)
   zephyr_library_sources_ifdef(CONFIG_POSIX_MESSAGE_PASSING mqueue.c)
   zephyr_library_sources_ifdef(CONFIG_POSIX_PRIORITY_SCHEDULING sched.c)
   zephyr_library_sources_ifdef(CONFIG_POSIX_SHARED_MEMORY_OBJECTS shm.c)
+endif()
+if(CONFIG_XSI_REALTIME OR (CONFIG_POSIX_FSYNC AND CONFIG_POSIX_MEMLOCK AND CONFIG_POSIX_MEMLOCK_RANGE AND CONFIG_POSIX_MESSAGE_PASSING AND CONFIG_POSIX_PRIORITY_SCHEDULING AND CONFIG_POSIX_SHARED_MEMORY_OBJECTS))
+  zephyr_compile_options(-D_XOPEN_SOURCE=700)
 endif()
 
 zephyr_library_sources_ifdef(CONFIG_XOPEN_STREAMS stropts.c)
@@ -166,6 +186,7 @@ endif()
 if (NOT CONFIG_TC_PROVIDES_XSI_SYSTEM_LOGGING)
   zephyr_library_sources_ifdef(CONFIG_XSI_SYSTEM_LOGGING syslog.c)
 endif()
+zephyr_compile_options_ifdef(CONFIG_XSI_SYSTEM_LOGGING -D_XSI_SYSTEM_LOGGING=700)
 
 zephyr_library_sources_ifdef(CONFIG_GETOPT_LONG
   getopt/getopt_long.c
